--- a/examples/CalibrateSpectra.ipynb
+++ b/examples/CalibrateSpectra.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 1,
    "id": "bbdd58ed-724b-4fac-94c9-adac9fc90783",
    "metadata": {},
    "outputs": [],
@@ -22,12 +22,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 2,
    "id": "36d4d47c-b390-459d-b8cd-c2776fc2ffab",
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pyEELSMODEL.api as em"
+    "import pyEELSMODEL.api as em\n",
+    "import copy"
    ]
   },
   {
@@ -41,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 3,
    "id": "bb52d1f6-e9bd-4cd5-9630-691a1de35958",
    "metadata": {},
    "outputs": [],
@@ -51,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 4,
    "id": "8ec92480-9b5c-4d38-8a25-f6a0782e0191",
    "metadata": {},
    "outputs": [
@@ -59,9 +60,9 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "16384it [00:13, 1249.14it/s]\n",
-      "16384it [00:37, 439.34it/s]\n",
-      "16384it [00:00, 36913.31it/s]\n"
+      "16384it [00:12, 1263.51it/s]\n",
+      "16384it [00:31, 524.20it/s]\n",
+      "16384it [00:00, 45556.41it/s]\n"
      ]
     },
     {
@@ -78,12 +79,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 5,
    "id": "b466ebde-7d99-44d6-80cb-dd5540c846c0",
    "metadata": {},
    "outputs": [],
    "source": [
     "cte = 1.01 #factor to change dispersion\n",
+    "expected_dispersion = copy.deepcopy(hl.dispersion)\n",
     "hl.dispersion = hl.dispersion * cte\n",
     "ll.dispersion = ll.dispersion * cte"
    ]
@@ -99,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": null,
    "id": "90d53671-5c00-4883-b54f-d5ea016a9e2b",
    "metadata": {},
    "outputs": [],
@@ -110,49 +112,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": null,
    "id": "e14c27fe-a2df-47c1-806b-be256a2e0cee",
    "metadata": {},
    "outputs": [],
    "source": [
-    "hl_al = fast_align.aligned_others[0]\n",
-    "ll_al = fast_align.aligned"
+    "hl_al = fast_align.aligned_others[0] #the core loss multispectrum\n",
+    "ll_al = fast_align.aligned #the low loss "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": null,
    "id": "87eeca74-5eed-47b7-a854-918dd3be35f6",
    "metadata": {
     "scrolled": true
    },
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "No artists with labels found to put in legend.  Note that artists whose label start with an underscore are ignored when legend() is called with no argument.\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "<pyEELSMODEL.operators.multispectrumvisualizer.MultiSpectrumVisualizer at 0x28c6d4c0fa0>"
-      ]
-     },
-     "execution_count": 71,
-     "metadata": {},
-     "output_type": "execute_result"
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "c:\\users\\djannis\\pycharmprojects\\project\\pyeelsmodel\\pyEELSMODEL\\operators\\multispectrumvisualizer.py:265: UserWarning: Attempt to set non-positive ylim on a log-scaled axis will be ignored.\n",
-      "  ax[1].set_ylim([miny, maxy])\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "em.MultiSpectrumVisualizer([ll_al, hl_al], logscale=True)"
    ]
@@ -168,7 +144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": null,
    "id": "d2fa61f3-46aa-4075-857b-2a5ce4927fa6",
    "metadata": {},
    "outputs": [],
@@ -188,7 +164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": null,
    "id": "0a7c0e8f-13c9-46ac-a9f9-aadb582c1d48",
    "metadata": {},
    "outputs": [],
@@ -206,29 +182,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": null,
    "id": "ad6863d9-1c2b-4e36-a7d1-c166bb3c3394",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Energy of C K1 is:280.8971129032258\n",
-      "Energy of N K1 is:402.8998119797086\n",
-      "Energy of O K1 is:712.0051284448323\n",
-      "Energy of Fe L3 is:726.3489380098016\n",
-      "Energy of Fe L2 is:533.6919921890734\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "cal.determine_edge_positions()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": null,
    "id": "ddd1b13a-e881-431c-b8c3-4a004c44fbc8",
    "metadata": {},
    "outputs": [],
@@ -238,7 +202,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": null,
    "id": "fc424a28-6581-479e-b4b1-e52e71a745c9",
    "metadata": {},
    "outputs": [],
@@ -248,7 +212,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": null,
    "id": "1a199d2f-9fd2-48ea-97df-a254d09d82a6",
    "metadata": {},
    "outputs": [],
@@ -258,27 +222,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": null,
    "id": "194ef9cc-319b-442a-bab6-d7f430b1c876",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Initial dispersion was: 0.505\n",
-      "Updated dispersion was: 0.5003387842630502\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "print('Initial dispersion was: '+str(hl_al.dispersion))\n",
-    "print('Updated dispersion was: '+str(cal_hlmean.dispersion))"
+    "print('Initial dispersion was: {} eV'.format(hl_al.dispersion))\n",
+    "print('Updated dispersion is: {} eV'.format(cal_hlmean.dispersion))\n",
+    "print('Expected dispersion is: {} eV'.format(expected_dispersion)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": null,
    "id": "bd40f3b9-141b-441f-9f1b-9598cb648e38",
    "metadata": {},
    "outputs": [],
@@ -297,7 +253,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": null,
    "id": "0f6c25d6-c814-4804-bff1-5e1a8d5f49dc",
    "metadata": {},
    "outputs": [],
@@ -315,7 +271,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": null,
    "id": "ff7496ee-12cf-4e5e-9265-2b71a1df15a4",
    "metadata": {},
    "outputs": [],
@@ -332,7 +288,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": null,
    "id": "e88f33e3-f5a2-4b62-8b88-ac01c45daab1",
    "metadata": {},
    "outputs": [],
@@ -342,7 +298,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": null,
    "id": "1bb6fc02-da6d-4c2d-95b2-4c974c540576",
    "metadata": {},
    "outputs": [],
@@ -352,7 +308,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": null,
    "id": "e69105c8-c2d7-4978-b7be-a896d7fbb2ba",
    "metadata": {},
    "outputs": [],
@@ -362,22 +318,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": null,
    "id": "8b1f67fa-4a3a-410d-a5c4-45e00bb21ac5",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Initial dispersion was: 0.505\n",
-      "Updated dispersion was: 0.5003387842630502\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "print('Initial dispersion was: '+str(hl_al.dispersion))\n",
-    "print('Updated dispersion was: '+str(cal_auto.spectrum.dispersion))"
+    "print('Initial dispersion was: {} eV'.format(hl_al.dispersion))\n",
+    "print('Updated dispersion is: {} eV'.format(cal_hlmean.dispersion))\n",
+    "print('Expected dispersion is: {} eV'.format(expected_dispersion)"
    ]
   }
  ],
@@ -397,7 +345,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.13"
+   "version": "3.9.0"
   }
  },
  "nbformat": 4,
