--- a/examples/CeriumOxidationState.ipynb
+++ b/examples/CeriumOxidationState.ipynb
@@ -6,7 +6,7 @@
    "metadata": {},
    "source": [
     "# Cerium oxidation state determination\n",
-    "In this notebook, the oxidation state of a **simulated** dataset is determined from the fine structure of the cerium M edge. The oxidation state is determined by performing a least squares fit of the data with a background and the two reference edges of Ce$^{3+}$ and Ce$^{4+}$. The reference edges are determined from the dataset itself. This can only be done when pure regions of both states are identified. If this is not available, proper references should be measured and can be used as input. In this case proper care needs to be taken for the experimental parameters such as acceleration voltage, collection angle, thickness, *etc.*\n"
+    "In this notebook, the oxidation state of a **simulated** dataset is determined from the fine structure of the cerium M edge. The oxidation state is determined by performing a linear least squares fit of the data with a background and the two reference edges of Ce$^{3+}$ and Ce$^{4+}$. The reference edges are determined from the dataset itself. This can only be done when pure regions of both states are identified. If this is not available, proper references should be measured and can be used as input. In this case proper care needs to be taken for the experimental parameters such as acceleration voltage, collection angle, thickness, *etc.*\n"
    ]
   },
   {
@@ -163,7 +163,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x2401f1fe050>"
+       "<matplotlib.legend.Legend at 0x1ee8027dd60>"
       ]
      },
      "execution_count": 8,
@@ -203,8 +203,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "16384it [00:14, 1146.06it/s]\n",
-      "16384it [01:13, 222.49it/s]\n"
+      "16384it [00:13, 1200.80it/s]\n",
+      "16384it [01:02, 263.94it/s]\n"
      ]
     }
    ],
@@ -242,12 +242,12 @@
    "metadata": {},
    "source": [
     "### Extract Core-loss edges\n",
-    "In this section, the reference edges are extracted from the simulated dataset. This will be done by first identifying the regions in which a pure oxidation state occurs. Next, a fit will be performed on this averaged edge. The fit includes the background, core-loss edge, fine structure and thickness. From the fit a raw experimental reference edge can be extracted which will be used for the oxidation state determination. Here we used model-based fitting to extract a reference edge which is different from other approaches where the experimental edge after power-law background subtraction gets deconvolved.  "
+    "In this section, the reference edges are extracted from the simulated dataset. This will be done by first identifying the regions in which a pure oxidation state occurs. Next, a fit will be performed on this averaged edge. The fit includes the background, core-loss edge, fine structure and thickness (via the low loss convolution). From the fit, a raw experimental reference edge can be extracted which will be used for the oxidation state determination. Here we used model-based fitting to extract a reference edge which is different from other approaches where the experimental edge after power-law background subtraction gets deconvolved.  "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "id": "804c90b9-d452-4c36-89b7-700ec98f84f3",
    "metadata": {},
    "outputs": [],
@@ -257,7 +257,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "id": "b5c6c629-d5c8-4e60-87bf-702d500a7e3c",
    "metadata": {},
    "outputs": [],
@@ -332,7 +332,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "id": "10074fa5-1d49-4f12-ab67-5a0a68381081",
    "metadata": {},
    "outputs": [],
@@ -344,7 +344,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "id": "a251111a-7114-411b-98a0-7549117f8f90",
    "metadata": {},
    "outputs": [],
@@ -363,7 +363,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 16,
    "id": "691e781d-fff9-48d0-a23f-7e8f39b850c1",
    "metadata": {},
    "outputs": [],
@@ -381,7 +381,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 17,
    "id": "59410171-118f-4105-89ec-a8e40e91973e",
    "metadata": {},
    "outputs": [
@@ -429,7 +429,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 18,
    "id": "168c5c22-06f0-4d64-8180-916fceb1318b",
    "metadata": {},
    "outputs": [
@@ -444,9 +444,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.29999999999999893\n",
-      "116\n",
-      "<pyEELSMODEL.components.CLedge.zezhong_coreloss_edgecombined.ZezhongCoreLossEdgeCombined object at 0x0000022510583670>\n",
+      "0.424264068711927\n",
+      "82\n",
+      "<pyEELSMODEL.components.CLedge.zezhong_coreloss_edgecombined.ZezhongCoreLossEdgeCombined object at 0x000001EE81471490>\n",
       "True\n",
       "here\n"
      ]
@@ -459,7 +459,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 19,
    "id": "e0203ce2-5d95-48d3-9456-42a90d6d6b37",
    "metadata": {
     "scrolled": true
@@ -476,9 +476,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.29999999999999893\n",
-      "116\n",
-      "<pyEELSMODEL.components.CLedge.zezhong_coreloss_edgecombined.ZezhongCoreLossEdgeCombined object at 0x0000022510507A00>\n",
+      "0.424264068711927\n",
+      "82\n",
+      "<pyEELSMODEL.components.CLedge.zezhong_coreloss_edgecombined.ZezhongCoreLossEdgeCombined object at 0x000001EE814719D0>\n",
       "True\n",
       "here\n"
      ]
@@ -499,17 +499,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 20,
    "id": "e3ad6633-e637-4479-85e5-19ed43313baa",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x22514217e20>"
+       "<matplotlib.legend.Legend at 0x1ee817b8280>"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -519,8 +519,8 @@
     "ax.plot(fixs0[0].energy_axis, fixs0[0].data/fixs0[0].integrate((950,1000)), label='Ce3+', color='blue')\n",
     "ax.plot(fixs1[0].energy_axis, fixs1[0].data/fixs1[0].integrate((950,1000)), label='Ce4+', color='red')\n",
     "\n",
-    "ax.plot(ce3.energy_axis, ce3.data/ce3.integrate((950,1000)), color='blue', linestyle='dotted', label='Simulted Ce3+')\n",
-    "ax.plot(ce4.energy_axis, ce4.data/ce4.integrate((950,1000)), color='red', linestyle='dotted', label='Simulted Ce4+')\n",
+    "ax.plot(ce3.energy_axis, ce3.data/ce3.integrate((950,1000)), color='blue', linestyle='dotted', label='Simulated Ce3+')\n",
+    "ax.plot(ce4.energy_axis, ce4.data/ce4.integrate((950,1000)), color='red', linestyle='dotted', label='Simulated Ce4+')\n",
     "ax.legend()"
    ]
   },
@@ -530,7 +530,7 @@
    "metadata": {},
    "source": [
     "### Linear Least Squares Fitting\n",
-    "The reference edges will be used to determine relative oxidation state of the cerium. The model consist out of:\n",
+    "The reference edges will be used to determine relative oxidation state of the cerium. The model consists out of following components:\n",
     "1. Background: Sum of powerlaws (to make it linear)\n",
     "2. Reference edges for Ce$^{3+}$ and Ce$^{4+}$\n",
     "3. Low loss to take multiple scattering into account since the t/&lambda; varies over the sample "
@@ -546,7 +546,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 21,
    "id": "1e5e31ac-7c4a-43c6-81e3-0e27985dbf5b",
    "metadata": {},
    "outputs": [],
@@ -557,7 +557,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 22,
    "id": "05649e81-4ea4-4460-a4f9-e45c4e4b3a77",
    "metadata": {},
    "outputs": [],
@@ -568,7 +568,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 23,
    "id": "6ea3e7bc-9421-42c8-8516-3bed2e2f2642",
    "metadata": {},
    "outputs": [],
@@ -578,17 +578,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 24,
    "id": "4866d13c-ad6a-4d3e-a0ea-84d7675f24dc",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<pyEELSMODEL.components.fixedpattern.FixedPattern at 0x22514453e20>"
+       "<pyEELSMODEL.components.fixedpattern.FixedPattern at 0x1ee808e9d60>"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -600,7 +600,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 25,
    "id": "89ec0203-8c71-457e-bf11-478c4ba80b72",
    "metadata": {},
    "outputs": [],
@@ -610,7 +610,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 26,
    "id": "6d1c5f76-ecf3-4e99-9522-b3ad725fab7b",
    "metadata": {},
    "outputs": [],
@@ -629,16 +629,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 27,
    "id": "9202c5f0-9812-4c9b-bf03-ca4998b65f81",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
       "cannot use analytical gradients since a convolutor is inside model\n",
-      "16384it [00:28, 576.06it/s]\n"
+      "16384it [00:17, 928.27it/s]\n"
      ]
     }
    ],
@@ -648,8 +650,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "e4ecb35d-2ef4-4ac5-96f6-32967b997cab",
+   "metadata": {},
+   "source": [
+    "Following function shows the elemental maps but also returns the maps in numpy format"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 29,
    "id": "85b51677-585a-47eb-9bef-cf347b23afdf",
    "metadata": {},
    "outputs": [],
@@ -658,8 +668,26 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "9f2d355f-61e9-412b-92bb-7e3026a13f89",
+   "metadata": {},
+   "source": [
+    "If you are only interested in the maps without the image, then following function can be used."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 32,
+   "id": "75ae50cf-59fb-4d20-a0bd-426c8b5b543a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "exp_maps, map_names = fit.get_map_results(refs)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
    "id": "fae08cc5-6e5e-4ecd-b10e-7273a0c22caa",
    "metadata": {},
    "outputs": [
@@ -667,16 +695,15 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\DJannis\\AppData\\Local\\Temp\\ipykernel_25264\\1042502816.py:10: RuntimeWarning: invalid value encountered in divide\n",
+      "C:\\Users\\DJannis\\AppData\\Local\\Temp\\ipykernel_11536\\3058569567.py:10: RuntimeWarning: invalid value encountered in divide\n",
       "  sim_ce3 = maps[0]/(maps[0]+maps[1]) #ground truth\n",
-      "C:\\Users\\DJannis\\AppData\\Local\\Temp\\ipykernel_25264\\1042502816.py:11: RuntimeWarning: invalid value encountered in divide\n",
+      "C:\\Users\\DJannis\\AppData\\Local\\Temp\\ipykernel_11536\\3058569567.py:11: RuntimeWarning: invalid value encountered in divide\n",
       "  sim_ce4 = maps[1]/(maps[0]+maps[1]) #ground truth\n"
      ]
     }
    ],
    "source": [
-    "\n",
-    "sum_ce = (exp_maps[0]+exp_maps[1])\n",
+    "sum_ce = (exp_maps[0]+exp_maps[1]) #this is the cerium map \n",
     "\n",
     "con_ce3 = exp_maps[0]/sum_ce #relative ratio ce3 from experimental data\n",
     "con_ce4 = exp_maps[1]/sum_ce #relative ratio ce4 from experimental data\n",
@@ -699,17 +726,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 34,
    "id": "b6a9accb-8fa2-44c0-8ba8-5f8742d00366",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x2250f448f70>"
+       "<matplotlib.image.AxesImage at 0x1eec742cc40>"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -737,7 +764,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 35,
    "id": "58fab7d7-82ee-475e-96e0-f29950d0b7e4",
    "metadata": {},
    "outputs": [
@@ -745,10 +772,10 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "16384it [00:17, 946.33it/s]\n",
-      "16384it [00:17, 948.46it/s]\n",
-      "16384it [00:18, 905.17it/s]\n",
-      "16384it [00:17, 962.24it/s]\n"
+      "16384it [00:12, 1270.35it/s]\n",
+      "16384it [00:13, 1244.91it/s]\n",
+      "16384it [00:12, 1262.49it/s]\n",
+      "16384it [00:12, 1269.08it/s]\n"
      ]
     }
    ],
@@ -762,17 +789,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 36,
    "id": "99522f1a-1456-4a8f-ad5a-6ee8d952d8c2",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<pyEELSMODEL.operators.multispectrumvisualizer.MultiSpectrumVisualizer at 0x225102d1d50>"
+       "<pyEELSMODEL.operators.multispectrumvisualizer.MultiSpectrumVisualizer at 0x1eec7255370>"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -806,7 +833,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.13"
+   "version": "3.9.0"
   }
  },
  "nbformat": 4,
