update bugs and thickness estimator

--- a/examples/ThicknessExample.ipynb
+++ b/examples/ThicknessExample.ipynb
@@ -106,17 +106,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 16,
    "id": "14fba1ba-9aea-43f5-a25c-0c25fae74f66",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x1c021bf76d0>"
+       "<matplotlib.image.AxesImage at 0x22b3145f520>"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -136,7 +136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "id": "470b67f1-ea48-4dad-a94d-b00c170ece81",
    "metadata": {},
    "outputs": [
@@ -144,7 +144,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "16384it [00:09, 1674.92it/s]\n"
+      "16384it [00:10, 1597.99it/s]\n"
      ]
     }
    ],
@@ -162,7 +162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "id": "1ab8b5f8-36fc-4b46-a890-5550b711a574",
    "metadata": {},
    "outputs": [],
@@ -175,7 +175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 10,
    "id": "d9040858-caf9-4263-be93-f96956e0ee77",
    "metadata": {
     "scrolled": true
@@ -191,10 +191,10 @@
     {
      "data": {
       "text/plain": [
-       "<pyEELSMODEL.operators.multispectrumvisualizer.MultiSpectrumVisualizer at 0x23c79228160>"
+       "<pyEELSMODEL.operators.multispectrumvisualizer.MultiSpectrumVisualizer at 0x22b33d8e370>"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -218,7 +218,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "id": "ba3c085b-b2cc-4c8f-82c4-4a8029d2dcd7",
    "metadata": {},
    "outputs": [],
@@ -228,7 +228,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "id": "58606d34-8661-4f0d-acda-40f290011174",
    "metadata": {},
    "outputs": [],
@@ -239,7 +239,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "id": "d9fac822-e5a8-4eb4-90e2-c665b90a15ca",
    "metadata": {
     "scrolled": true
@@ -256,8 +256,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "16384it [01:04, 252.92it/s]\n",
-      "16384it [00:01, 10854.52it/s]\n"
+      "16384it [01:05, 251.96it/s]\n",
+      "16384it [00:01, 10954.32it/s]\n"
      ]
     }
    ],
@@ -276,7 +276,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 17,
    "id": "de5be522-df19-4e3b-9c28-824f7cf2c1af",
    "metadata": {},
    "outputs": [
@@ -286,14 +286,14 @@
        "Text(0.5, 1.0, 'Gaussian model')"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "fig, ax = plt.subplots(1,3)\n",
-    "ax[0].imshow(tlamba_map, vmin=0,vmax=1.5. cmap='jet')\n",
+    "ax[0].imshow(tlambda_map, vmin=0,vmax=1.5, cmap='jet')\n",
     "ax[1].imshow(thick_mirror.tlambda,vmin=0,vmax=1.5,cmap='jet')\n",
     "ax[1].set_title('Mirrored')\n",
     "ax[2].imshow(thick_g.tlambda,vmin=0,vmax=1.5,cmap='jet')\n",
@@ -325,7 +325,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.13"
+   "version": "3.9.0"
   }
  },
  "nbformat": 4,
