--- a/examples/CalibrateSpectra.ipynb
+++ b/examples/CalibrateSpectra.ipynb
@@ -60,9 +60,27 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "16384it [00:12, 1263.51it/s]\n",
-      "16384it [00:31, 524.20it/s]\n",
-      "16384it [00:00, 45556.41it/s]\n"
+      "16384it [00:11, 1425.69it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "hll\n",
+      "hll\n",
+      "hll\n",
+      "hll\n",
+      "hll\n",
+      "hll\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "16384it [00:26, 612.74it/s]\n",
+      "16384it [00:00, 45905.35it/s]\n"
      ]
     },
     {
@@ -345,7 +363,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.0"
+   "version": "3.10.0"
   }
  },
  "nbformat": 4,
