small update in jupyter notebook

--- a/Problem with model_to_multispectrum.ipynb
+++ b/Problem with model_to_multispectrum.ipynb
@@ -76,15 +76,7 @@
       "N4 is used\n",
       "N3 is used\n",
       "N2 is used\n",
-      "N1 is used\n",
-      "test i am supressed: U N7 edge381 eV   False\n",
-      "test i am supressed: U N6 edge391 eV   False\n",
-      "test i am supressed: U N5 edge738 eV   False\n",
-      "test i am supressed: U N4 edge780 eV   False\n",
-      "test i am supressed: U N3 edge1045 eV   False\n",
-      "test i am supressed: U N2 edge1273 eV   False\n",
-      "test i am supressed: U N1 edge1441 eV   False\n",
-      "test i am supressed: O K1 edge532 eV   False\n"
+      "N1 is used\n"
      ]
     }
    ],
@@ -171,7 +163,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 4/4 [00:00<00:00, 130.29it/s]\n"
+      "100%|██████████| 4/4 [00:00<00:00, 255.81it/s]\n"
      ]
     }
    ],
@@ -237,7 +229,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 26,
+   "id": "a0ce09a3",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 4/4 [00:00<00:00, 1002.40it/s]\n",
+      "No artists with labels found to put in legend.  Note that artists whose label start with an underscore are ignored when legend() is called with no argument.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<pyEELSMODEL.operators.multispectrumvisualizer.MultiSpectrumVisualizer at 0x256712ae8a0>"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#show the full model\n",
+    "\n",
+    "m1 =fit.model_to_multispectrum()\n",
+    "em.MultiSpectrumVisualizer([m1])\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "33d09bd1-be48-4d81-9265-0882a10be41c",
    "metadata": {},
    "outputs": [
@@ -245,22 +269,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "  0%|          | 0/4 [00:00<?, ?it/s]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "test i am supressed: U N7 edge381 eV   False\n",
-      "test i am supressed: U N6 edge391 eV   False\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 4/4 [00:00<00:00, 14.85it/s]\n",
+      "100%|██████████| 4/4 [00:00<00:00, 15.44it/s]\n",
       "No artists with labels found to put in legend.  Note that artists whose label start with an underscore are ignored when legend() is called with no argument.\n"
      ]
     },
@@ -268,40 +277,61 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "test i am supressed: U N5 edge738 eV   True\n",
-      "test i am supressed: U N4 edge780 eV   False\n",
-      "test i am supressed: U N3 edge1045 eV   False\n",
-      "test i am supressed: U N2 edge1273 eV   False\n",
-      "test i am supressed: U N1 edge1441 eV   False\n",
-      "test i am supressed: O K1 edge532 eV   False\n"
+      "subcomponent is suppressed, to unset call setsuppress(False) on the specific subcomponent: U N5 edge738 eV\n",
+      "subcomponent is suppressed, to unset call setsuppress(False) on the specific subcomponent: U N4 edge780 eV\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "<pyEELSMODEL.operators.multispectrumvisualizer.MultiSpectrumVisualizer at 0x1a273c6e6c0>"
+       "<pyEELSMODEL.operators.multispectrumvisualizer.MultiSpectrumVisualizer at 0x256712a72f0>"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# Ideally this would work:\n",
+    "# remove parts from the model before converting to multispectrum\n",
     "U = fit.model.components[0]\n",
     "O = fit.model.components[1]\n",
     "xs_UN4 = U.xsectionlist[3]\n",
     "xs_UN5 = U.xsectionlist[2]\n",
     "\n",
-    "\n",
-    "#U_N45 =fit.model_to_multispectrum_with_comps([fine_structure])\n",
-    "#U_N45 =fit.model_to_multispectrum()\n",
-    "\n",
-    "#U_N45 =fit.model_to_multispectrum_with_comps([bg,U])\n",
-    "U_N45 =fit.model_to_multispectrum_without_comps([bg,fine_structure,xs_UN5])\n",
-    "\n",
+    "U_N45 =fit.model_to_multispectrum_without_comps([bg,fine_structure,xs_UN4,xs_UN5])\n",
     "em.MultiSpectrumVisualizer([U_N45])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "id": "ca9b84df",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 4/4 [00:00<00:00, 930.77it/s]\n",
+      "No artists with labels found to put in legend.  Note that artists whose label start with an underscore are ignored when legend() is called with no argument.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<pyEELSMODEL.operators.multispectrumvisualizer.MultiSpectrumVisualizer at 0x2566a07d460>"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# or include only specific components when converting to multispectrum\n",
+    "m3 =fit.model_to_multispectrum_with_comps([bg,O,fine_structure])\n",
+    "em.MultiSpectrumVisualizer([m3])"
    ]
   },
   {
@@ -314,29 +344,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "test i am supressed: U N7 edge381 eV   False\n",
-      "test i am supressed: U N6 edge391 eV   False\n",
-      "test i am supressed: U N5 edge738 eV   False\n",
-      "test i am supressed: U N4 edge780 eV   False\n",
-      "test i am supressed: U N3 edge1045 eV   False\n",
-      "test i am supressed: U N2 edge1273 eV   False\n",
-      "test i am supressed: U N1 edge1441 eV   False\n",
-      "[0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0.\n",
-      " 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0.\n",
-      " 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0.\n",
-      " 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0.\n",
-      " 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0.\n",
-      " 0. 0. 0. 0.]\n"
+      "subcomponent is suppressed, to unset call setsuppress(False) on the specific subcomponent: U N4 edge780 eV\n"
      ]
     }
    ],
    "source": [
-    "xs_UN4.setsuppress(False)\n",
+    "#or suppress the individual components yourself, but don't forget to switch them back to unsuppressed\n",
+    "xs_UN4.setsuppress(True)\n",
     "xs_UN5.setsuppress(False)\n",
-    "#xs_UN4.calculate()\n",
-    "#xs_UN4.calculate_cross_section()\n",
-    "#U.setchanged()\n",
-    "#U.calculate_cross_section()\n",
     "U.calculate()\n",
     "U.plot()\n"
    ]
