--- a/examples/CalibrateSpectra.ipynb
+++ b/examples/CalibrateSpectra.ipynb
@@ -247,7 +247,7 @@
    "source": [
     "print('Initial dispersion was: {} eV'.format(hl_al.dispersion))\n",
     "print('Updated dispersion is: {} eV'.format(cal_hlmean.dispersion))\n",
-    "print('Expected dispersion is: {} eV'.format(expected_dispersion)"
+    "print('Expected dispersion is: {} eV'.format(expected_dispersion))"
    ]
   },
   {
